force-app/main/default/objects/PMC_DH_IntegrationSettings__mdt/PMC_DH_IntegrationSettings__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Digital Hub ( Mosaic Direct ) to store all the API related configurations</description>
    <label>Digital Hub Integration</label>
    <pluralLabel>Digital Hub Integrations</pluralLabel>
</CustomObject>