force-app/main/default/objects/PMC_DH_IntegrationSettings__mdt/fields/PMC_DH_Authorization__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Authorization__c</fullName>
    <label>Authorization</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>