force-app/main/default/objects/PMC_DH_IntegrationSettings__mdt/fields/PMC_DH_CachedTime__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_CachedTime__c</fullName>
    <inlineHelpText>Maximum allowed cached time : 172800 secs</inlineHelpText>
    <label>Cached Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>