force-app/main/default/objects/PMC_DH_IntegrationSettings__mdt/fields/PMC_DH_ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ClientSecret__c</fullName>
    <label>ClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>