force-app/main/default/objects/PMC_DH_IntegrationSettings__mdt/fields/PMC_DH_RetryCount__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_RetryCount__c</fullName>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>