force-app/main/default/objects/PMC_DH_IntegrationSettings__mdt/fields/PMC_DH_RetryTimeout__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_RetryTimeout__c</fullName>
    <inlineHelpText>The time is in seconds</inlineHelpText>
    <label>Retry Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>