force-app/main/default/objects/PMC_DH_IntegrationSettings__mdt/fields/PMC_DH_Timeout__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Timeout__c</fullName>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>